# study

./: .gitmodules  test1.php
apue/: Orders.txt  a.out  ccc.c  cpp.c  daemonize.c  io.c  sell_store  sorted_list.c  test.c  trade.c  trade_constract
java/: build.gradle  hello.java  settings.xml  test.java
php/: test.php
rust/my_bevy_game/: Cargo.toml
rust/my_bevy_game/src/: hello.rs  main.rs
rust/my_bevy_game/src/animation/: animated_fox.rs  animated_transform.rs  cubic_curve.rs  gltf_skinned_mesh.rs  mod.rs  morph_targets.rs
rust/my_bevy_game/src/games/: alien_cake_addict.rs  mod.rs
rust/my_bevy_game/src/input/: char_input_events.rs  keyboard_input.rs  keyboard_input_events.rs  keyboard_modifiers.rs  mod.rs  mouse_grab.rs  mouse_input.rs  mouse_input_events.rs  text_input.rs  touch_input.rs
rust/my_bevy_game/src/two_dimension/: bloom.rs  bounding.rs  custom_gltf_vertex_attribute.rs  gizmos.rs  mesh2d.rs  mesh2d_manual.rs  mesh2d_vertex_color_texture.rs  mod.rs  move_sprite.rs  pixel_grid_snap.rs  rotation.rs  shapes.rs  sprite_flipping.rs  sprite_sheet.rs  sprite_slice.rs  sprite_tile.rs  text.rs  texture_atlas.rs  transparency_2d.rs  viewport_to_world.rs
rust/my_bevy_game/src/window/: mod.rs  multiple_windows.rs
shell/: hello.c
tcp_ip/: a.out  chat_clnt.c  chat_server.c  clnt  echo_EPETserv.c  echo_client.c  echo_epollserv.c  echo_mpclient.c  echo_mpserv.c  echo_server.c  echo_stdclient.c  echo_stdserv.c  echomsg.txt  echoselectserv.c  fork.c  gethostbyname.c  hello_client.c  hello_server.c  low_open.c  mutex.c  news.txt  news_receiver.c  oob_recv.c  (+15 more)
(+1195 files in other folders)
