[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# NOTE: Remember to revert this before releasing your game! Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. If you remove the "dynamic" feature, your game executable can run standalone.
[dependencies]
bevy = { version = "0.13.1", features = ["dynamic_linking"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enalbe a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enalbe high optimization for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
